@@ -1,6 +1,7 @@
 package com.residencia.ecommerce.security;
 
 import java.util.Arrays;
+import java.util.List;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
@@ -42,7 +43,7 @@ public class WebSecurityConfig {
             .exceptionHandling(handling -> handling.authenticationEntryPoint(unauthorizedHandler)) //configura a classe para tratamento da excecao de autenticacao
             .sessionManagement(sess -> sess.sessionCreationPolicy(SessionCreationPolicy.STATELESS)) //define a politica de sessao
             .authorizeHttpRequests(auth -> auth
-            		.requestMatchers("/**").permitAll()
+            		//.requestMatchers("/**").permitAll()
             		.requestMatchers(HttpMethod.GET, "/produtos/**","/categorias/**","/pedidos/**","/itempedidos/**").permitAll() //autoriza o acesso a rotas por perfis
             		.requestMatchers("/swagger-ui/**","/v3/api-docs/**","/actuator/**","/login","/clientes/**","/roles/**","/enderecos/**").permitAll() //define as rotas publicas/abertas
                                         
@@ -64,7 +65,7 @@ public class WebSecurityConfig {
 		CorsConfiguration configuration = new CorsConfiguration();
 		configuration.setAllowedOrigins(Arrays.asList("*"));
 		configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE"));
-		configuration.setAllowedHeaders(Arrays.asList("*"));
+		configuration.setAllowedHeaders(List.of("Authorization", "content-type"));
 		UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
 		source.registerCorsConfiguration("/**", configuration);
 		return source;
